@@ -1,3 +1,10 @@
+2006-05-16  James Turner  <james@worldforge.org>
+
+	* Eris/Account.cpp, Eris/Account.h, Eris/Avatar.cpp: initial work to
+	  support client-directed deactivation of a character. This is work in
+	  progress, but the API is intended to be final; comments are
+	  welcome.
+
 2006-05-15  James Turner  <james@worldforge.org>
 
 	* Eris/Account.cpp: modify the Logout op sent from Account, to
